# MCP_Data_analysis

./: .gitignore  pyproject.toml  requirements.txt  setup.py
src/mcp_server_ds/: __init__.py  server.py  tools.py
